--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -20,11 +20,26 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="bDy-gg-5qL">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="bDy-gg-5qL" secondAttribute="trailing" id="74B-aD-twu"/>
+                            <constraint firstItem="bDy-gg-5qL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="7uX-he-05N"/>
+                            <constraint firstItem="bDy-gg-5qL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hv7-WW-LA4"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="bDy-gg-5qL" secondAttribute="bottom" id="mgl-Rf-A3l"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LaunchImage" width="1194" height="1590"/>
+    </resources>
 </document>
