--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -35,6 +35,7 @@
                     </view>
                     <connections>
                         <segue destination="Lk6-YB-rDz" kind="show" identifier="PresentHomeViewController" id="WId-FU-vlQ"/>
+                        <segue destination="soY-vM-vqO" kind="show" identifier="PresentTutorialViewController" id="LOO-ie-euR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -53,20 +54,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="This is Tutorial" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5AD-bG-zp2">
-                                <rect key="frame" x="166" y="152" width="111" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lla-jC-2Fy">
+                                <rect key="frame" x="0.0" y="20" width="375" height="347"/>
+                            </scrollView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g89-t7-KMn">
+                                <rect key="frame" x="0.0" y="367" width="375" height="300"/>
+                                <subviews>
+                                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="A5w-Aq-47J">
+                                        <rect key="frame" x="168" y="54" width="39" height="37"/>
+                                    </pageControl>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTZ-jL-IDo">
+                                        <rect key="frame" x="172" y="209" width="30" height="30"/>
+                                        <state key="normal" title="Skip"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HbZ-ZR-qlY">
+                                        <rect key="frame" x="107.5" y="127" width="160" height="46"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="160" id="6YT-Vr-ZQg"/>
+                                            <constraint firstAttribute="height" constant="46" id="Oy8-jj-hD1"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <state key="normal" title="Create Project"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="7i0-AY-nil"/>
+                                    <constraint firstItem="hTZ-jL-IDo" firstAttribute="centerX" secondItem="g89-t7-KMn" secondAttribute="centerX" id="8om-MM-ecY"/>
+                                    <constraint firstItem="A5w-Aq-47J" firstAttribute="centerX" secondItem="g89-t7-KMn" secondAttribute="centerX" id="Fcp-a4-BZ6"/>
+                                    <constraint firstItem="HbZ-ZR-qlY" firstAttribute="centerY" secondItem="g89-t7-KMn" secondAttribute="centerY" id="IEV-ul-Uf7"/>
+                                    <constraint firstItem="HbZ-ZR-qlY" firstAttribute="top" secondItem="A5w-Aq-47J" secondAttribute="bottom" constant="36" id="Jwc-v8-yy1"/>
+                                    <constraint firstItem="HbZ-ZR-qlY" firstAttribute="centerX" secondItem="g89-t7-KMn" secondAttribute="centerX" id="OID-jV-MiI"/>
+                                    <constraint firstItem="hTZ-jL-IDo" firstAttribute="top" secondItem="HbZ-ZR-qlY" secondAttribute="bottom" constant="36" id="pXY-kt-diS"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="lla-jC-2Fy" secondAttribute="trailing" id="ERK-01-8wM"/>
+                            <constraint firstItem="wr6-DY-Dv4" firstAttribute="top" secondItem="g89-t7-KMn" secondAttribute="bottom" id="HcK-VF-kPl"/>
+                            <constraint firstItem="lla-jC-2Fy" firstAttribute="leading" secondItem="V6G-aP-v7U" secondAttribute="leading" id="Zey-RQ-624"/>
+                            <constraint firstAttribute="trailing" secondItem="g89-t7-KMn" secondAttribute="trailing" id="eex-WA-RKl"/>
+                            <constraint firstItem="g89-t7-KMn" firstAttribute="top" secondItem="lla-jC-2Fy" secondAttribute="bottom" id="lQK-SB-L3g"/>
+                            <constraint firstItem="g89-t7-KMn" firstAttribute="leading" secondItem="V6G-aP-v7U" secondAttribute="leading" id="y8v-lf-a1h"/>
+                            <constraint firstItem="lla-jC-2Fy" firstAttribute="top" secondItem="OZ8-9g-X9W" secondAttribute="bottom" id="yIt-8N-QEM"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bottomView" destination="g89-t7-KMn" id="S04-Lk-HVR"/>
+                        <outlet property="createProjectButton" destination="HbZ-ZR-qlY" id="UjA-XN-rss"/>
+                        <outlet property="scrollView" destination="lla-jC-2Fy" id="fTh-yh-BZQ"/>
+                        <outlet property="skipButton" destination="hTZ-jL-IDo" id="CLb-gQ-BHZ"/>
+                        <segue destination="Lk6-YB-rDz" kind="show" identifier="PresentHomeViewControllerFromTutorial" id="ITD-rp-xTe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k2V-BD-Zfd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="817" y="38"/>
+            <point key="canvasLocation" x="816.79999999999995" y="37.331334332833585"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="1su-JX-PbK">
@@ -118,4 +162,7 @@
     <resources>
         <image name="LaunchImage" width="1194" height="1590"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="ITD-rp-xTe"/>
+    </inferredMetricsTieBreakers>
 </document>
