--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -307,12 +307,20 @@
                                     <constraint firstItem="0Is-bg-JVL" firstAttribute="top" secondItem="3fX-WT-Oaq" secondAttribute="bottom" constant="8" id="zGp-YH-f1d"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="S5n-lJ-lop">
+                                <rect key="frame" x="0.0" y="420" width="768" height="604"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="aoK-vv-jvK" firstAttribute="leading" secondItem="LSJ-di-GE9" secondAttribute="leading" id="7Is-5L-qrs"/>
+                            <constraint firstItem="Pzy-W0-mGa" firstAttribute="top" secondItem="S5n-lJ-lop" secondAttribute="bottom" id="7UT-uv-pfZ"/>
+                            <constraint firstItem="S5n-lJ-lop" firstAttribute="leading" secondItem="LSJ-di-GE9" secondAttribute="leading" id="GJB-a6-dhY"/>
+                            <constraint firstAttribute="trailing" secondItem="S5n-lJ-lop" secondAttribute="trailing" id="N8l-yM-jpW"/>
                             <constraint firstAttribute="trailing" secondItem="aoK-vv-jvK" secondAttribute="trailing" id="Qad-PU-2nu"/>
                             <constraint firstItem="aoK-vv-jvK" firstAttribute="top" secondItem="cep-hh-PcM" secondAttribute="bottom" id="Td0-ff-DYe"/>
+                            <constraint firstItem="S5n-lJ-lop" firstAttribute="top" secondItem="aoK-vv-jvK" secondAttribute="bottom" id="nvu-eI-B0w"/>
                         </constraints>
                     </view>
                     <connections>
@@ -321,11 +329,12 @@
                         <outlet property="director" destination="5BI-np-OHu" id="nxd-dN-O3I"/>
                         <outlet property="groupName" destination="Cuo-QS-qLZ" id="5AY-An-FHx"/>
                         <outlet property="projectTitle" destination="YqM-w7-u6D" id="mXI-e1-STj"/>
+                        <outlet property="tableView" destination="S5n-lJ-lop" id="2Lb-Al-e3o"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WOc-Am-lXq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1589.5999999999999" y="1515.2923538230887"/>
+            <point key="canvasLocation" x="1589.0625" y="1515.234375"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="UhD-wk-uum">
