--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -326,6 +326,10 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YBZ-qq-uKO">
+                                        <rect key="frame" x="705" y="35" width="39" height="30"/>
+                                        <state key="normal" title="펼치기"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -333,7 +337,9 @@
                                     <constraint firstItem="eJo-z4-fFC" firstAttribute="top" secondItem="lOQ-qC-wJ1" secondAttribute="bottom" constant="8" id="bdW-IM-sJ1"/>
                                     <constraint firstAttribute="height" constant="100" id="ha4-pU-gPm"/>
                                     <constraint firstItem="lOQ-qC-wJ1" firstAttribute="top" secondItem="hUM-im-HYS" secondAttribute="top" constant="16" id="p1U-Jd-UEx"/>
+                                    <constraint firstAttribute="trailing" secondItem="YBZ-qq-uKO" secondAttribute="trailing" constant="24" id="p4J-dN-3Yz"/>
                                     <constraint firstItem="eJo-z4-fFC" firstAttribute="leading" secondItem="hUM-im-HYS" secondAttribute="leading" constant="24" id="qfs-DM-ChJ"/>
+                                    <constraint firstItem="YBZ-qq-uKO" firstAttribute="centerY" secondItem="hUM-im-HYS" secondAttribute="centerY" id="wr6-1o-vW9"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -355,6 +361,7 @@
                         <outlet property="actor" destination="0Is-bg-JVL" id="5W0-0p-Jpm"/>
                         <outlet property="cameraMan" destination="6Sx-85-XAU" id="VEc-lF-Hpb"/>
                         <outlet property="director" destination="5BI-np-OHu" id="nxd-dN-O3I"/>
+                        <outlet property="expandButton" destination="YBZ-qq-uKO" id="JG8-iq-udT"/>
                         <outlet property="groupName" destination="Cuo-QS-qLZ" id="5AY-An-FHx"/>
                         <outlet property="headerView" destination="aoK-vv-jvK" id="nxj-6i-Xgd"/>
                         <outlet property="headerViewHeightConstraint" destination="34a-Kc-c7Y" id="UBJ-qO-rmL"/>
