--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -63,10 +63,6 @@
                                     <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="A5w-Aq-47J">
                                         <rect key="frame" x="364.5" y="54" width="39" height="37"/>
                                     </pageControl>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTZ-jL-IDo">
-                                        <rect key="frame" x="368.5" y="209" width="30" height="30"/>
-                                        <state key="normal" title="Skip"/>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HbZ-ZR-qlY">
                                         <rect key="frame" x="304" y="127" width="160" height="46"/>
                                         <constraints>
@@ -74,18 +70,16 @@
                                             <constraint firstAttribute="height" constant="46" id="Oy8-jj-hD1"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <state key="normal" title="Create Project"/>
+                                        <state key="normal" title="Continue"/>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="7i0-AY-nil"/>
-                                    <constraint firstItem="hTZ-jL-IDo" firstAttribute="centerX" secondItem="g89-t7-KMn" secondAttribute="centerX" id="8om-MM-ecY"/>
                                     <constraint firstItem="A5w-Aq-47J" firstAttribute="centerX" secondItem="g89-t7-KMn" secondAttribute="centerX" id="Fcp-a4-BZ6"/>
                                     <constraint firstItem="HbZ-ZR-qlY" firstAttribute="centerY" secondItem="g89-t7-KMn" secondAttribute="centerY" id="IEV-ul-Uf7"/>
                                     <constraint firstItem="HbZ-ZR-qlY" firstAttribute="top" secondItem="A5w-Aq-47J" secondAttribute="bottom" constant="36" id="Jwc-v8-yy1"/>
                                     <constraint firstItem="HbZ-ZR-qlY" firstAttribute="centerX" secondItem="g89-t7-KMn" secondAttribute="centerX" id="OID-jV-MiI"/>
-                                    <constraint firstItem="hTZ-jL-IDo" firstAttribute="top" secondItem="HbZ-ZR-qlY" secondAttribute="bottom" constant="36" id="pXY-kt-diS"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -105,7 +99,6 @@
                         <outlet property="createProjectButton" destination="HbZ-ZR-qlY" id="UjA-XN-rss"/>
                         <outlet property="pageControl" destination="A5w-Aq-47J" id="kZp-9t-pbk"/>
                         <outlet property="scrollView" destination="lla-jC-2Fy" id="fTh-yh-BZQ"/>
-                        <outlet property="skipButton" destination="hTZ-jL-IDo" id="CLb-gQ-BHZ"/>
                         <segue destination="Lk6-YB-rDz" kind="show" identifier="PresentHomeViewControllerFromTutorial" id="ITD-rp-xTe"/>
                     </connections>
                 </viewController>
@@ -542,6 +535,106 @@
             </objects>
             <point key="canvasLocation" x="2256" y="1515"/>
         </scene>
+        <!--Make Cut View Controller-->
+        <scene sceneID="7IC-gb-v3G">
+            <objects>
+                <viewController storyboardIdentifier="MakeCutViewController" id="Lbb-0m-ecR" customClass="MakeCutViewController" customModule="Doocine_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1u7-Ab-kVD"/>
+                        <viewControllerLayoutGuide type="bottom" id="pTd-Dy-cx5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MxP-2Z-s6z">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xVv-5R-d3j">
+                                <rect key="frame" x="0.0" y="20" width="768" height="360"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="360" id="ZMY-mf-QmJ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dialog" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lu0-Gs-F5j">
+                                <rect key="frame" x="24" y="404" width="43.5" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter dialog" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eey-or-zpl">
+                                <rect key="frame" x="24" y="438" width="720" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="yHh-Zw-LQt"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H61-4C-R2a">
+                                <rect key="frame" x="24" y="476" width="720" height="0.5"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="TR8-1g-ykT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHOT SIZE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X3z-Rs-EuT">
+                                <rect key="frame" x="24" y="492.5" width="76" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="F.S" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dkb-Ld-wVi">
+                                <rect key="frame" x="24" y="526.5" width="30" height="25.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CAMERA WALK" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Fl-d1-ev5">
+                                <rect key="frame" x="331" y="492" width="106.5" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aID-Uk-r7G">
+                                <rect key="frame" x="331" y="527" width="35" height="26"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7Fl-d1-ev5" firstAttribute="top" secondItem="X3z-Rs-EuT" secondAttribute="top" id="0KW-KV-3ak"/>
+                            <constraint firstAttribute="trailing" secondItem="H61-4C-R2a" secondAttribute="trailing" constant="24" id="5wp-sQ-uba"/>
+                            <constraint firstItem="H61-4C-R2a" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" constant="24" id="6rn-bq-yHv"/>
+                            <constraint firstItem="xVv-5R-d3j" firstAttribute="top" secondItem="1u7-Ab-kVD" secondAttribute="bottom" id="BDa-uQ-N6D"/>
+                            <constraint firstItem="aID-Uk-r7G" firstAttribute="leading" secondItem="7Fl-d1-ev5" secondAttribute="leading" id="Fho-UW-of0"/>
+                            <constraint firstItem="eey-or-zpl" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" constant="24" id="M9v-B1-fC0"/>
+                            <constraint firstItem="Lu0-Gs-F5j" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" constant="24" id="NwM-6b-EjE"/>
+                            <constraint firstItem="7Fl-d1-ev5" firstAttribute="centerX" secondItem="MxP-2Z-s6z" secondAttribute="centerX" id="Pzq-6P-Da9"/>
+                            <constraint firstItem="X3z-Rs-EuT" firstAttribute="top" secondItem="H61-4C-R2a" secondAttribute="bottom" constant="16" id="Qnu-KM-uUv"/>
+                            <constraint firstItem="Dkb-Ld-wVi" firstAttribute="top" secondItem="X3z-Rs-EuT" secondAttribute="bottom" constant="16" id="Vp4-5R-BgX"/>
+                            <constraint firstItem="xVv-5R-d3j" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" id="YDJ-YV-796"/>
+                            <constraint firstItem="aID-Uk-r7G" firstAttribute="centerY" secondItem="Dkb-Ld-wVi" secondAttribute="centerY" id="eTa-Ul-UVv"/>
+                            <constraint firstItem="X3z-Rs-EuT" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" constant="24" id="gVB-sa-7D9"/>
+                            <constraint firstItem="eey-or-zpl" firstAttribute="top" secondItem="Lu0-Gs-F5j" secondAttribute="bottom" constant="16" id="jW2-kZ-E9e"/>
+                            <constraint firstAttribute="trailing" secondItem="xVv-5R-d3j" secondAttribute="trailing" id="nWZ-Xh-s7k"/>
+                            <constraint firstItem="Dkb-Ld-wVi" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" constant="24" id="paW-sy-k8T"/>
+                            <constraint firstAttribute="trailing" secondItem="eey-or-zpl" secondAttribute="trailing" constant="24" id="qBD-VD-RQ5"/>
+                            <constraint firstItem="H61-4C-R2a" firstAttribute="top" secondItem="eey-or-zpl" secondAttribute="bottom" constant="8" id="uT9-RA-W4g"/>
+                            <constraint firstItem="Lu0-Gs-F5j" firstAttribute="top" secondItem="xVv-5R-d3j" secondAttribute="bottom" constant="24" id="z95-L8-0tt"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="cameraWalkValueLabel" destination="aID-Uk-r7G" id="8J3-Sw-HqF"/>
+                        <outlet property="shotSizeValueLabel" destination="Dkb-Ld-wVi" id="WnI-WL-2NA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a2E-g5-C7J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2928.90625" y="1514.6484375"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="UhD-wk-uum">
             <objects>
@@ -565,6 +658,6 @@
         <image name="LaunchImage" width="1194" height="1590"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ITD-rp-xTe"/>
+        <segue reference="WId-FU-vlQ"/>
     </inferredMetricsTieBreakers>
 </document>
