--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -174,6 +174,38 @@
             </objects>
             <point key="canvasLocation" x="1590" y="824"/>
         </scene>
+        <!--Intro View Controller-->
+        <scene sceneID="8Xv-IZ-slG">
+            <objects>
+                <viewController storyboardIdentifier="IntroViewController" id="AoB-aL-jKa" customClass="IntroViewController" customModule="Doocine_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YmC-3d-itb"/>
+                        <viewControllerLayoutGuide type="bottom" id="RrE-km-OtK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lSp-43-ciN">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kfx-38-uda">
+                                <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Kfx-38-uda" firstAttribute="leading" secondItem="lSp-43-ciN" secondAttribute="leading" id="8zG-iN-yES"/>
+                            <constraint firstAttribute="trailing" secondItem="Kfx-38-uda" secondAttribute="trailing" id="Z7V-9S-mWg"/>
+                            <constraint firstItem="Kfx-38-uda" firstAttribute="top" secondItem="YmC-3d-itb" secondAttribute="bottom" id="lkQ-KO-plu"/>
+                            <constraint firstItem="RrE-km-OtK" firstAttribute="top" secondItem="Kfx-38-uda" secondAttribute="bottom" id="lsb-d1-Z1c"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="scrollView" destination="Kfx-38-uda" id="dUb-xo-Jwz"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6FU-KO-O8G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2255" y="824"/>
+        </scene>
         <!--Project Detail View Controller-->
         <scene sceneID="jPa-EU-O4y">
             <objects>
